tests/NormalTests/paczka2/big_fuzzy/58016993.err
Error in line 1: fz3hDm A796 27,2
Error in line 21: vYMwzjvc2L A796 41,12
Error in line 22: nBiH9w S952 219,3
Error in line 28: nBiH9w S218 92,1
Error in line 24: IU8hN S218 77,3
Error in line 12: Sh9bWz1xPKJ S218 21,0
Error in line 38: nBiH9w S952 303,5
Error in line 47: IU8hN S829 108,1
Error in line 53: S829 A796 79,3
Error in line 60: 7eL5s8vGcHB S218 21,6
Error in line 48: vYMwzjvc2L S218 77,8
Error in line 68: vYMwzjvc2L S952 44,9
Error in line 72: S829 S829 23,2
Error in line 77: S829 S952 48,78
Error in line 69: vYMwzjvc2L S218 18,1
Error in line 74: S829 S952 24,4
Error in line 78: vYMwzjvc2L S829 93,6
Error in line 66: nBiH9w S829 7,7
Error in line 89: S829 S218 66,6
Error in line 111: fz3hDm A796 143,9
Error in line 117: nBiH9w S218 68,5
Error in line 116: vYMwzjvc2L A796 9,4
Error in line 129: vYMwzjvc2L S952 26,3
Error in line 136: S829 S829 65,0
Error in line 122: Sh9bWz1xPKJ S218 7,9
Error in line 141: Sh9bWz1xPKJ S952 74,5
Error in line 154: nBiH9w S952 165,5
Error in line 172: vYMwzjvc2L A796 54,6
Error in line 170: S829 S829 62,0
Error in line 178: S829 A796 359,31
Error in line 175: S829 A796 77,9
Error in line 174: vYMwzjvc2L S218 37,1
Error in line 187: Sh9bWz1xPKJ S952 6,8
Error in line 190: nBiH9w S952 60,83
Error in line 183: vYMwzjvc2L S829 84,7
Error in line 193: nBiH9w S952 22,9
Error in line 195: nBiH9w S218 99,4
Error in line 189: Sh9bWz1xPKJ S829 94,7
Error in line 196: nBiH9w A796 30,6
Error in line 197: Sh9bWz1xPKJ S952 17,8
Error in line 201: Sh9bWz1xPKJ S218 62,9
Error in line 203: vYMwzjvc2L S218 78,4
Error in line 217: IU8hN S218 38,10
Error in line 211: IU8hN S218 8,8
Error in line 222: Sh9bWz1xPKJ S829 66,0
Error in line 223: IU8hN S952 96,6
Error in line 232: nBiH9w S829 I,5
Error in line 230: IU8hN A796 24,9
Error in line 229: nBiH9w S829 2,5
Error in line 235: nBiH9w A796 13,8
Error in line 236: nBiH9w S829 19,0
Error in line 238: nBiH9w S218 57,3
Error in line 240: IU8hN S952 98,0
Error in line 247: Sh9bWz1xPKJ A796 7,0
Error in line 241: nBiH9w S952 98,3
